# panopt

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  HANDOFF.md  README.md  flake.nix  justfile  panopt.kdl  rust-toolchain.toml
.claude/: settings.json
.claude/skills/verify-all/: SKILL.md
01/f82f0965ab/: metadata.json
01/f82f0965ab/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
0d/48cb56917a/: metadata.json
0d/48cb56917a/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
10/2bef0c6942/: metadata.json
10/2bef0c6942/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
18/82496ffa14/: metadata.json
18/82496ffa14/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
1f/c598f40d69/: metadata.json
1f/c598f40d69/0/: content_hash.txt  full.jsonl  metadata.json
23/2a1ef7efff/: metadata.json
23/2a1ef7efff/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
24/5479e03519/: metadata.json
24/5479e03519/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
28/e44904aee7/: metadata.json
28/e44904aee7/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
3c/d45b669998/: metadata.json
3c/d45b669998/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
3c/d45b669998/1/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
45/a647e1997c/: metadata.json
45/a647e1997c/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
4e/133598d595/: metadata.json
4e/133598d595/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
4e/b0709b9f1f/: metadata.json
4e/b0709b9f1f/0/: metadata.json  prompt.txt
4f/98c9c1052e/: metadata.json
4f/98c9c1052e/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
57/3d5bb6107e/: metadata.json
57/3d5bb6107e/0/: metadata.json  prompt.txt
57/3d5bb6107e/1/: content_hash.txt  metadata.json
57/3d5bb6107e/2/: content_hash.txt  full.jsonl  metadata.json
57/3d5bb6107e/3/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
57/3d5bb6107e/4/: full.jsonl  metadata.json  prompt.txt
58/34131d46ba/: metadata.json
58/34131d46ba/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
5c/72cc2fe49d/: metadata.json
5c/72cc2fe49d/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
5d/c7f97208f5/: metadata.json
5d/c7f97208f5/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
5d/c7f97208f5/1/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
5d/c7f97208f5/2/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
5d/d46374f819/: metadata.json
5d/d46374f819/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
60/2fd448b680/: metadata.json
60/2fd448b680/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
77/8e87a90430/: metadata.json
77/8e87a90430/0/: content_hash.txt  full.jsonl  metadata.json
84/3079a1f342/: metadata.json
84/3079a1f342/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
96/173494ec84/: metadata.json
96/173494ec84/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
99/d082c3d349/: metadata.json
99/d082c3d349/0/: content_hash.txt  full.jsonl  metadata.json
99/d082c3d349/1/: full.jsonl  metadata.json  prompt.txt
99/d082c3d349/2/: metadata.json
99/d082c3d349/3/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
99/d082c3d349/4/: content_hash.txt  metadata.json
a2/5574599b02/: metadata.json
a2/5574599b02/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
a2/73312a3791/: metadata.json
a2/73312a3791/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
a6/371ae73dee/: metadata.json
a6/371ae73dee/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
b6/054b0f6822/: metadata.json
b6/054b0f6822/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
b8/82955acbff/: metadata.json
b8/82955acbff/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
ba/2d3deee3fd/: metadata.json
ba/2d3deee3fd/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
ba/2d3deee3fd/1/: content_hash.txt  full.jsonl  metadata.json
bc/9f06e5d595/: metadata.json
bc/9f06e5d595/0/: content_hash.txt  full.jsonl  metadata.json
c1/44c0e0afc2/: metadata.json
c1/44c0e0afc2/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
c3/e1c3ffa35a/: metadata.json
c3/e1c3ffa35a/0/: content_hash.txt  full.jsonl  metadata.json
c4/24723b63bc/: metadata.json
c9/3b97e7ccd3/: metadata.json
ce/e47bd3945f/: metadata.json
crates/panopt/: Cargo.toml
crates/panopt-core/: Cargo.toml
crates/panopt-core/src/: auth.rs  db.rs  error.rs  lib.rs  locks.rs  model.rs  projection.rs  registry.rs  state.rs
crates/panopt-tool-surface/: Cargo.toml
crates/panopt-tool-surface/src/: lib.rs  params.rs
crates/panopt-zellij/: Cargo.toml
crates/panopt-zellij/.cargo/: config.toml
crates/panopt-zellij/src/: main.rs
crates/panopt/src/: agent.rs  agent_config.rs  agent_tool.rs  clip.rs  close_gate.rs  daemon.rs  delete_gate.rs  edit.rs  form.rs  id_kind.rs  main.rs  mcp.rs  mcp_proxy.rs  mcpclient.rs  note.rs  note_form.rs  paths.rs  process.rs  roster.rs  scratchpad.rs  scratchpad_form.rs  search.rs  todo.rs  todo_form.rs  up.rs  viewer.rs  viewstate.rs  wrap.rs
crates/panoptd/: Cargo.toml
crates/panoptd/src/: handler.rs  main.rs  params.rs
d7/d67a54b5a0/: metadata.json
da/75e172abf0/: metadata.json
dc/3e27216825/: metadata.json
e0/3554129d74/: metadata.json
e3/ba44cc3eab/: metadata.json
ea/1b70de19ad/: metadata.json
ef/ab54633466/: metadata.json
f6/3d2b158b14/: metadata.json
fc/b221ba7bf1/: metadata.json
(+67 files in other folders)
