[package]
name = "panopt-core"
version.workspace = true
edition.workspace = true

# Deliberately minimal: no MCP, async, or HTTP crate. `rusqlite` is allowed - it
# is a synchronous embedded database, none of those three. `cargo tree -p
# panopt-core` is still expected to contain none of rmcp / axum / tokio - that is
# the mechanical check for the transport-agnostic-core principle.
[dependencies]
thiserror = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
