[package]
name = "panopt"
version.workspace = true
edition.workspace = true

[dependencies]
panopt-core = { path = "../panopt-core" }
panopt-tool-surface = { path = "../panopt-tool-surface" }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
dirs = "5"
libc = "0.2"
# A synchronous HTTP client for the `panopt todo` MCP calls - no async runtime,
# which suits a short-lived CLI. TLS is dropped: the daemon is plain localhost.
ureq = { version = "2", default-features = false }
serde_json = { workspace = true }
percent-encoding = "2"
# The `panopt todo edit` form TUI.
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"
# For measuring grapheme cell width when soft-wrapping the body field. Already
# in our dependency graph via ratatui; declaring it here lets us use it
# directly.
unicode-width = "0.2"
